@startuml

title __ENTORNO's Class Diagram__\n

  namespace edu.fiuba.algoChess {
    namespace modelo.entorno {
      class edu.fiuba.algoChess.modelo.entorno.Celda {
          + Celda()
          + Celda()
          + Celda()
          + eliminar()
          + getPiezaActual()
          + getSectorDelJugador()
          + guardarFaseInicial()
          + guardarFaseJuego()
          + obtenerBandoDePieza()
          + setPiezaActual()
          + setSectorDelJugador()
          + ubicar()
      }
    }
  }
  

  namespace edu.fiuba.algoChess {
    namespace modelo.entorno {
      class edu.fiuba.algoChess.modelo.entorno.CeldaNull {
          ~ CeldaNull()
      }
    }
  }
  

  namespace edu.fiuba.algoChess {
    namespace modelo.entorno {
      class edu.fiuba.algoChess.modelo.entorno.DistanciaCercana {
          + ejecutarComportamientoPorDistancia()
      }
    }
  }
  

  namespace edu.fiuba.algoChess {
    namespace modelo.entorno {
      class edu.fiuba.algoChess.modelo.entorno.DistanciaLejana {
          + ejecutarComportamientoPorDistancia()
      }
    }
  }
  

  namespace edu.fiuba.algoChess {
    namespace modelo.entorno {
      class edu.fiuba.algoChess.modelo.entorno.DistanciaMedia {
          + ejecutarComportamientoPorDistancia()
      }
    }
  }
  

  namespace edu.fiuba.algoChess {
    namespace modelo.entorno {
      class edu.fiuba.algoChess.modelo.entorno.DistanciaRelativa {
          + DistanciaRelativa()
          + ejecutarComportamientoPorDistancia()
          {static} + getDistanciaRelativa()
      }
    }
  }
  

  namespace edu.fiuba.algoChess {
    namespace modelo.entorno {
      class edu.fiuba.algoChess.modelo.entorno.ObservadorTablero {
          {static} # tablero : Tablero
          + ObservadorTablero()
          + obtenerCelda()
          + obtenerPieza()
          + setTablero()
      }
    }
  }
  

  namespace edu.fiuba.algoChess {
    namespace modelo.entorno {
      class edu.fiuba.algoChess.modelo.entorno.Tablero {
          - campoDeBatalla : Map<Ubicacion, Celda>
          + Tablero()
          + asignarSectores()
          + eliminar()
          + getCampoDeBatalla()
          + getCelda()
          + getJugadorActivo()
          + inicializarTablero()
          + setCampoDeBatalla()
          + setJugadorActivo()
          + ubicarEnCeldaFaseInicial()
          + ubicarEnCeldaFaseJuego()
          - inicializarObservadorTablero()
      }
    }
  }
  

  namespace edu.fiuba.algoChess {
    namespace modelo.entorno {
      class edu.fiuba.algoChess.modelo.entorno.Ubicacion {
          - x : int
          - y : int
          + Ubicacion()
          + equals()
          + getCoordenadaX()
          + getCoordenadaY()
          + getObservable()
          + getUbicacionAbajo()
          + getUbicacionArriba()
          + getUbicacionDerecha()
          + getUbicacionIzquierda()
          + getX()
          + getY()
          + hashCode()
          + obtenerCelda()
          + obtenerPieza()
          + reconocerTerrenoParaAtacarADistanciaMedia()
          - reconocerAliadoAXDistancia()
          - reconocerEnemigoAXDistancia()
      }
    }
  }
  

  edu.fiuba.algoChess.modelo.entorno.Celda o-- edu.fiuba.algoChess.modelo.entidades.Pieza : piezaActual
  edu.fiuba.algoChess.modelo.entorno.Celda o-- edu.fiuba.algoChess.modelo.bandos.Bando : sectorDelJugador
  edu.fiuba.algoChess.modelo.entorno.CeldaNull -up-|> edu.fiuba.algoChess.modelo.entorno.Celda
  edu.fiuba.algoChess.modelo.entorno.DistanciaCercana -up-|> edu.fiuba.algoChess.modelo.entorno.DistanciaRelativa
  edu.fiuba.algoChess.modelo.entorno.DistanciaLejana -up-|> edu.fiuba.algoChess.modelo.entorno.DistanciaRelativa
  edu.fiuba.algoChess.modelo.entorno.DistanciaMedia -up-|> edu.fiuba.algoChess.modelo.entorno.DistanciaRelativa
  edu.fiuba.algoChess.modelo.entorno.Tablero o-- edu.fiuba.algoChess.modelo.juego.Jugador : jugadorActivo
  edu.fiuba.algoChess.modelo.entorno.Ubicacion o-- edu.fiuba.algoChess.modelo.entorno.ObservadorTablero : observable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
